--- a/style.css
+++ b/style.css
@@ -223,7 +223,7 @@ body {
   height: 73.7%;
   transform: perspective(500px) rotateY(-15deg) rotateX(8deg) rotateZ(-1deg);
   background-size: 100% 100%;
-  background: url(../assets/trading.svg) no-repeat 0 0;
+  background: url(assets/trading.svg) no-repeat 0 0;
   box-shadow: -20px 32px 64px rgba(0, 0, 0, 0.25);
 }
 .alpha .alpha-wrapper .alpha-right-side .hero-figure-box-05:before {
@@ -236,7 +236,7 @@ body {
   width: 30.3%;
   height: 40.4%;
   transform: rotateZ(20deg);
-  background: url(../assets/brain.svg) no-repeat 0 0;
+  background: url(assets/brain.svg) no-repeat 0 0;
   background-size: cover;
   box-shadow: -20px 32px 64px rgba(0, 0, 0, 0.25);
 }
@@ -250,7 +250,7 @@ body {
   width: 12.12%;
   height: 16.16%;
   transform: rotateZ(-20deg);
-  background: url(../assets/bitcoin.svg) no-repeat 0 0;
+  background: url(assets/bitcoin.svg) no-repeat 0 0;
   background-size: cover;
   box-shadow: -20px 32px 64px rgba(0, 0, 0, 0.25);
 }
@@ -338,7 +338,7 @@ body {
 }
 
 .hero-figure::before {
-  background-image: url("./assets/hero-back-illustration.svg");
+  background-image: url("assets/hero-back-illustration.svg");
   height: 178.78%;
   left: -1.3%;
   top: -57.8%;
@@ -473,7 +473,7 @@ body {
   background-size: 100%;
   bottom: 18.8%;
   transform: translateX(-50%);
-  background-image: url(../assets/pricing-illustration.svg);
+  background-image: url(assets/pricing-illustration.svg);
   z-index: -1;
 }
 .pricing .pricing-wrapper .pricing-table-wrap .pricing-table .pricing-table-inner {
@@ -577,7 +577,7 @@ body {
   top: -100px;
   width: 160px;
   height: 187px;
-  background-image: url(/assets/cta-illustration.svg);
+  background-image: url(assets/cta-illustration.svg);
   background-repeat: no-repeat;
 }
 .communication .communication-wrapper .communication-inner span {
